--- a/Views/AwsBucketReader/Index.cshtml
+++ b/Views/AwsBucketReader/Index.cshtml
@@ -7,7 +7,7 @@
     <table>
         <thead>
             <tr>
-                <th>Id</th>
+                <th>ID</th>
                 <th>Resource Name</th>
                 <th>Tech Stack</th>
             </tr>
@@ -16,8 +16,8 @@
             @foreach (var item in Model)
             {
                 <tr>
-                    <td>@item.Id</td>
-                    <td>@item.ResourceName</td>
+                    <td>@item.ID</td>
+                    <td>@item.Name</td>
                     <td>@item.TechStack</td>
                 </tr>
             }
