--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,9 +23,6 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="HelloUser" asp-action="Index">User From AWS</a>
                         </li>
                         <li class="nav-item">
@@ -35,7 +32,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="AwsDynamoDbReader" asp-action="Index">DynamoDB Content</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CsvUpload" asp-action="Index">UploadCsv</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CsvUpload" asp-action="Index">Upload Csv to S3</a>
                         </li>
                     </ul>
                 </div>
