--- a/Views/CsvUpload/Index.cshtml
+++ b/Views/CsvUpload/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @model CSV_Modifier_Client.Models.UploadViewModel
 
-<h1>Upload CSV File to S3</h1>
+<h1>Upload CSV File to S3 Bucket</h1>
 
 <form method="post" enctype="multipart/form-data" asp-controller="CsvUpload" asp-action="Upload">
     <div class="form-group">
