--- a/Views/HelloUser/Index.cshtml
+++ b/Views/HelloUser/Index.cshtml
@@ -4,6 +4,9 @@
 	ViewData["Title"] = "Hello User";
 }
 
+<h2>Fetching User Name as Secret from AWS</h2>
+<hr />
+<br />
 <div class="text-center">
     <h1 class="display-4">Welcome @Model.Token </h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
